--- a/public/css/style.css
+++ b/public/css/style.css
@@ -340,12 +340,12 @@ th {
 # Typography
 --------------------------------------------------------------*/
 body {
-  font-family: Kanit, "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #232323;
 }
 
 p {
-  font-family: Kanit, "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   margin-bottom: 1.5rem;
   line-height: 1.4;
@@ -532,7 +532,7 @@ li {
 }
 
 .site-banner h1 {
-  font-family: Kanit, "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.6rem;
   font-weight: 300;
   float: left;
@@ -685,7 +685,7 @@ li {
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.36);
   transition: all 0.3s;
   font-size: 1rem;
-  font-family: Kanit, "Fira Sans Extra Condensed";
+  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed";
 }
 
 .site-mobile-menu-button.not-home {
@@ -903,7 +903,7 @@ body {
 /*   padding-bottom: 6rem; */
   margin: 0;
   /* top: 60px; */
-  background-image: url('../img/bg/2018-conference-bg.jpg'); 
+  background-image: url('../img/kotesol-natcon-2019-call-for-proposals-date.png'); 
   background-size: cover; 
   background-position: center; 
   position: relative;
@@ -1148,7 +1148,7 @@ a.ticket-button {
   /* line-height: 2.6rem; */
   padding: 1rem 3rem 0.9rem!important;
   display: inline-block;
-  font-family: Kanit, "Fira Sans Extra Condensed", sans-serif;
+  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", sans-serif;
   text-transform: uppercase;
 }
 
@@ -1254,7 +1254,7 @@ a.ticket-button {
 }
 
 .testimonial cite {
-  font-family: Kanit, "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: block;
   font-size: 1rem;
   padding-top: 1rem;
@@ -3209,7 +3209,7 @@ h2.accomodation {
   }
 
   .form-submit {
-    font-family: Kanit, "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     outline: none;
     border: none;
     margin-top: 1rem;
