--- a/public/css/style.css
+++ b/public/css/style.css
@@ -340,12 +340,12 @@ th {
 # Typography
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #232323;
 }
 
 p {
-  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   margin-bottom: 1.5rem;
   line-height: 1.4;
@@ -532,7 +532,7 @@ li {
 }
 
 .site-banner h1 {
-  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.6rem;
   font-weight: 300;
   float: left;
@@ -595,7 +595,7 @@ li {
 .site-menu-bar {
   /* background: rgba(96,125,139,0.5); */
   background: white;
-/*   font-family: 'Open Sans Condensed', sans-serif; */
+/*   font-family: 'Roboto Condensed', sans-serif; */
   transition: all 0.3s;
   /* position: absolute; */
   /* width: 100vw; */
@@ -685,7 +685,7 @@ li {
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.36);
   transition: all 0.3s;
   font-size: 1rem;
-  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed";
+  font-family: "Roboto Condensed", "Fira Sans Extra Condensed";
 }
 
 .site-mobile-menu-button.not-home {
@@ -1001,7 +1001,7 @@ a.ticket-button {
 }
 
 .page-info {
-/*   font-family: 'Open Sans Condensed', sans-serif; */
+/*   font-family: 'Roboto Condensed', sans-serif; */
 }
 
 .page-title {
@@ -1148,7 +1148,7 @@ a.ticket-button {
   /* line-height: 2.6rem; */
   padding: 1rem 3rem 0.9rem!important;
   display: inline-block;
-  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", sans-serif;
+  font-family: "Roboto Condensed", "Fira Sans Extra Condensed", sans-serif;
   text-transform: uppercase;
 }
 
@@ -1254,7 +1254,7 @@ a.ticket-button {
 }
 
 .testimonial cite {
-  font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: block;
   font-size: 1rem;
   padding-top: 1rem;
@@ -3209,7 +3209,7 @@ h2.accomodation {
   }
 
   .form-submit {
-    font-family: "Open Sans Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: "Roboto Condensed", "Fira Sans Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     outline: none;
     border: none;
     margin-top: 1rem;
