--- a/server/views/layout/includes/header.pug
+++ b/server/views/layout/includes/header.pug
@@ -34,7 +34,7 @@ nav.site-navigation.mobile-menu
         a(href='/tickets') Tickets
       li.site-menu-item.supplementary.line(role='separator')
       li.site-menu-item.supplementary
-        a(href='/team') About
+        a(href='/team') Team
       li.site-menu-item.supplementary
         a(href='/code-of-conduct') Code of Conduct
       li.site-menu-item.supplementary
