--- a/server/views/notfound.pug
+++ b/server/views/notfound.pug
@@ -1,2 +1,6 @@
 //- Page: Not Found (404)
 extends layout/index
+block content
+  section.page-section.container
+    h1 404
+    h2 Page not found.
