--- a/server/views/speakers.pug
+++ b/server/views/speakers.pug
@@ -1,3 +1,6 @@
 //- Page: Speakers
 extends layout/index
-h1 Hello
+block content
+  include partials/speaker-grid 
+  include partials/speaker-single 
+  include partials/speaker-list
