--- a/server/views/tickets.pug
+++ b/server/views/tickets.pug
@@ -1,2 +1,162 @@
 //- Page: Tickets
 extends layout/index
+block content
+  section.page-section
+  .container
+    h2.section-title Let&apos;s Make it Official
+    p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
+  section.page-section.red-dot
+    .container
+      ul.ticket-grid
+        li.center
+          .ticket
+            .price
+              p.ticket-type Non-Member
+              p.ticket-price
+                span.krw &#x20A9;
+                | 10,000
+            .explanation
+              p Full access to the conference, networking opportunities, and the after party.
+            .benefits
+              p.benefit-title
+                | Full benefits 
+                i.fa.fa-arrow-down
+              ul
+                li.benefit-item Network with conference attendees
+                li.benefit-item
+                  | Access to 7 amazing 
+                  a(href='/speakers') talks
+                  |  &amp; presenters
+                li.benefit-item
+                  | After party in 
+                  a(href='/location#shinsikaji') Shinsikaji
+            .buy
+              p.center Contact us for details
+              p.center
+                a.page-button.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
+        li.center
+          .ticket
+            .price
+              p.ticket-type KOTESOL Member*
+              p.ticket-price
+                span.krw &#x20A9;
+                | 5,000
+              p.fineprint *Students included
+            .explanation
+              p
+                | Full access to the conference, networking opportunities, the after party, as well as all KOTESOL 
+                a(href='https://koreatesol.org/content/member-benefits') membership benefits
+                | .
+            .benefits
+              p.benefit-title
+                | Full benefits 
+                i.fa.fa-arrow-down
+              ul
+                li.benefit-item Network with conference attendees
+                li.benefit-item
+                  | Access to 7 amazing 
+                  a(href='/speakers') talks
+                  |  &amp; presenters
+                li.benefit-item
+                  | After party in 
+                  a(href='/location#shinsikaji') Shinsikaji
+                li.benefit-item Member&apos;s discount to this &amp; other nationwide KOTESOL events
+                li.benefit-item
+                  | Access to 3 KOTESOL 
+                  a(href='https://koreatesol.org/publications') publications
+                  |  &amp; the KOTESOL 
+                  a(href='https://koreatesol.org/video') video library
+                li.benefit-item
+                  | Submit your work for 
+                  a(href='https://koreatesol.org/publications') publication
+                li.benefit-item
+                  | Apply for a KOTESOL 
+                  a(href='https://koreatesol.org/research-comm') Research
+                  | , travel, or conference 
+                  a(href='http://koreatesol.org/ioc') grant
+                li.benefit-item
+                  | Apply for 
+                  a(href='https://koreatesol.org/TOTY') Teacher of the Year Award
+                li.benefit-item
+                  | Apply to 
+                  em present
+                  |  at KOTESOL&apos;s National &amp; International Conferences
+                li.benefit-item
+                  | Show your membership card for special 
+                  a(href='https://koreatesol.org/content/member-discounts') discounts
+                  |  around the country
+                li.benefit-item
+                  | And 
+                  a(href='https://koreatesol.org/content/member-benefits') many more
+                  | !
+            .buy
+              p.center Contact us for details
+              p.center
+                a.page-button.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
+        li.center
+          .ticket
+            .price
+              p.ticket-type New Membership*
+              p.ticket-price.free FREE
+              p.fineprint
+                | *
+                span.krw &#x20A9;
+                | 50,000/year
+            .explanation
+              p
+                | Full access to the conference, networking opportunities, the after party, as well as all KOTESOL 
+                a(href='https://koreatesol.org/content/member-benefits') membership benefits
+                |  - 
+                em and
+                |  a nifty printed 
+                a(href='') conference booklet.
+            .benefits
+              p.benefit-title
+                | Full benefits 
+                i.fa.fa-arrow-down
+              ul
+                li.benefit-item Network with conference attendees
+                li.benefit-item
+                  | Access to 7 amazing 
+                  a(href='/speakers') talks
+                  |  &amp; presenters
+                li.benefit-item
+                  | After party in 
+                  a(href='/location#shinsikaji') Shinsikaji
+                li.benefit-item Member&apos;s discount to this &amp; other nationwide KOTESOL events
+                li.benefit-item.bonus
+                  | A 
+                  em printed
+                  |  conference booklet
+                li.benefit-item
+                  | Access to 3 KOTESOL 
+                  a(href='https://koreatesol.org/publications') publications
+                  |  &amp; the KOTESOL 
+                  a(href='https://koreatesol.org/video') video library
+                li.benefit-item
+                  | Submit your work for 
+                  a(href='https://koreatesol.org/publications') publication
+                li.benefit-item
+                  | Apply for a KOTESOL 
+                  a(href='https://koreatesol.org/research-comm') Research
+                  | , travel, or conference 
+                  a(href='http://koreatesol.org/ioc') grant
+                li.benefit-item
+                  | Apply for 
+                  a(href='https://koreatesol.org/TOTY') Teacher of the Year Award
+                li.benefit-item
+                  | Apply to 
+                  em present
+                  |  at KOTESOL&apos;s National &amp; International Conferences
+                li.benefit-item
+                  | Show your membership card for special 
+                  a(href='https://koreatesol.org/content/member-discounts') discounts
+                  |  around the country
+                li.benefit-item
+                  | And 
+                  a(href='https://koreatesol.org/content/member-benefits') many more
+                  | !
+            .buy
+              p.center Contact us for details
+              p.center
+                a.page-button.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
