--- a/server/views/privacy.pug
+++ b/server/views/privacy.pug
@@ -1,2 +1,32 @@
 //- Page: Privacy
 extends layout/index
+block content
+  section.page-section.privacy
+  .container.small
+    h2.section-title Privacy Policy
+    div(style='background: white')
+      p
+        | At KOTESOL, we take your personal information seriously. Here&apos;s the outline of our guidelines and practices around privacy.
+      h4 Information Collection &amp; Use
+      p
+        | KOTESOL and its partners will not sell, share, or rent this information to others in ways different from what is disclosed on this page. No personal information is collected on this domain, and registration and processing information is only collected for attendance purposes.
+      h4 Cookies, IP Addresses &amp; Statistics
+      p
+        | A cookie is a piece of data stored on the user&rsquo;s hard drive containing information about the user. We do not require any form of login or user account for this website. If a user rejects the cookie, they may still use this site.
+      p
+        | An Internet Protocol (IP) address is a numerical identification that your computer or other browsing device sends out. We use cookies and IP addresses to analyze trends, administer the site, track user&rsquo;s movement, and gather broad demographic information for aggregate use. Cookies and IP addresses are not linked to personally identifiable information.
+      p This site does not store any cookies.
+      h4 Secure Storage
+      p
+        | At all times, your registration information is restricted to team members who require information to perform a specific job. No sponsors, speakers or volunteers will have access to your personal details.
+      h4 Sharing
+      p
+        | KOTESOL and its partners will not, under any circumstances, share with any third party individual IP addresses, email addresses, personal contact details or other information collected through this website or related statistic tracking systems. If information sharing is required for the purposes of this or any other event, you will be given immediate notice.
+      h4 External Links
+      p
+        | This website contains links to other sites. Please be aware that we are not responsible for the privacy practices of such other sites. We encourage you to be aware that when you leave this site, you are responsible for reading the privacy statements of every web site that collects personally identifiable information. This privacy policy applies solely to information collected by this web site.
+      h4 Questions
+      p
+        | If you have any questions about this policy and the security of this website, you can contact us 
+        a(href='mailto:jnjconference@gmail.com') via email
+        | .
