--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,20 +1,21 @@
 //- Page: Index (Home page)
 extends layout/index
 block hero
-  include partials/hero
+  //- include partials/hero
+  img(src='/design/web/kotesol-natcon-2019-cloud-wide.jpg')
   include partials/whatis
 
 block content
   section.site-header
-  .hero
+  //- .hero
   .flex-it.container
     .left-half
       h2.page-title Join us at the 2019 KOTESOL National Conference
       h3.page-subtitle
-        | May 18, 2019, 
+        | May 25, 2019, n
         a(href='/location') Jeonju
       p.page-note Pre-registration opens soon!
-      a(href='button btn') Get notified
+      a(href='button btn') Get notif
     .right-half
   section.page-section.whatis
 
