--- a/server/views/layout/index.pug
+++ b/server/views/layout/index.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     include includes/html-head
-body
+body.with-call
   include includes/header
   block hero
   block content
