--- a/server/views/layout/includes/call.pug
+++ b/server/views/layout/includes/call.pug
@@ -1,5 +1,5 @@
 .call-to-action
   .container 
     h2.call-title Call for Speakers
-    p Interested in presenting at the 2019 Korea TESOL National Conference? Fill out our speaker form. 
+    p Interested in presenting? Fill out our speaker form. 
     a.button.btn.right.big Submit a Talk
