--- a/server/views/partials/whatis.pug
+++ b/server/views/partials/whatis.pug
@@ -1,10 +1,12 @@
-.container
-  dl.whatiskotesol
-    dt
-      h2.section-title What is KOTESOL?
-    dd
-      p
-        | KOTESOL is a non-profit, professional organization that
-        | seeks to assist teachers in self-development and improve
-        | English Language Teaching in Korea. At the JNJ Regional
-        | Conference, prepare to &quot;Learn - Share - Succeed.&quot;
+section.whatis
+  .container
+    dl.whatiskotesol
+      dt
+        h2.section-title What is KOTESOL?
+      dd
+        p
+          | KOTESOL is a non-profit, professional organization that
+          | seeks to assist teachers in self-development and improve
+          | English Language Teaching in Korea. At the JNJ Regional
+          | Conference, prepare to &quot;Learn - Share - Succeed.&quot;
+          | #31167f, #371E83
