--- a/server/views/layout/includes/header.pug
+++ b/server/views/layout/includes/header.pug
@@ -10,12 +10,14 @@ include call
         | National Conference
       .banner-right
         p.banner-location
-          | May 18, 2019 / 10am / 
+          | May 18, 2019 / 10am
+          br
           a(href='/location') Jeonju
-        a.button.ticket-button(href='/tickets') Tickets
-        button.site-mobile-menu-button.show.not-home
-          i.fa.fa-bars
-          |  Menu
+        .top-buttons
+          a.button.ticket-button(href='/tickets') Tickets
+          button.site-mobile-menu-button.show.not-home
+            i.fa.fa-bars
+            |  Menu
 nav.site-navigation.mobile-menu
   ul.site-menu
     .container
