--- a/server/views/layout/includes/scripts.pug
+++ b/server/views/layout/includes/scripts.pug
@@ -1,4 +1,5 @@
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js')
 script(src='./js/functions.js')
 script(src='./reload/reload.js')
