--- a/server/views/partials/keypts.pug
+++ b/server/views/partials/keypts.pug
@@ -17,4 +17,4 @@
       h3 Succeed
       p
         | All English teachers or English-based businesses, of any level or nationality, are eligible to join KOTESOL. Find out more at 
-        a(style='color: #ffcc00;', href='www.koreatesol.org/join-kotesol') www.koreatesol.org/join-kotesol
+        a(href='www.koreatesol.org/join-kotesol') www.koreatesol.org/join-kotesol
