--- a/public/css/new-style.css
+++ b/public/css/new-style.css
@@ -350,6 +350,7 @@ p {
   margin-bottom: 1.5rem;
   line-height: 1.4;
   font-weight: 300;
+  opacity: 0.8;
 }
 
 @media screen and (min-width: 36rem) {
@@ -479,7 +480,7 @@ li {
 }
 
 .call-to-action p {
-  opacity: 0.8;
+  /* opacity: 0.8; */
 }
 
 .call-title {
@@ -1290,7 +1291,7 @@ a.ticket-button {
 
 .whatis {
   background: #371e83;
-  padding: 3rem 0;
+  padding: 10rem 0 0;
   color: white;
   /* position: absolute; */
   /* bottom: 0; */
@@ -1322,6 +1323,34 @@ a.ticket-button {
   margin-bottom: 0;
   /* font-size: 1.4rem; */
   font-weight: 300;
+  /* opacity: 0.8; */
+}
+
+.plenary {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#201b48+0,161637+100 */
+  background: #201b48; /* Old browsers */
+  background: -moz-linear-gradient(top, #201b48 0%, #161637 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #201b48 0%,#161637 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #201b48 0%,#161637 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#201b48', endColorstr='#161637',GradientType=0 ); /* IE6-9 */
+  color: white;
+  padding: 2rem 0;
+}
+
+.plenary figure {
+  height: 100%;
+  margin: 0;
+}
+
+.plenary-img {
+  /* max-width: 120px; */
+  /* -webkit-filter: grayscale(100%); Safari 6.0 - 9.0 */
+  /* filter: grayscale(100%); */
+  /* float: left; */
+  height: 100%;
+  width: auto;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .page-callout {
@@ -1384,6 +1413,8 @@ a.ticket-button {
 .speakers {
   padding-top: 5rem;
   padding-bottom: 5rem;
+  background: #161637;
+  color: white;
   /* overflow-x: hidden; */
 }
 
@@ -1394,7 +1425,7 @@ a.ticket-button {
   height: 160px;
   border-bottom-left-radius: 160px;
   border-top-left-radius: 160px;
-  background-color: #ffcc00;
+  background-color: #00f2e6;
   right: 0px;
   bottom: -80px;
   z-index: 10;
@@ -1586,7 +1617,7 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
   height: 160px;
   border-bottom-right-radius: 160px;
   border-top-right-radius: 160px;
-  background-color: #ffcc00;
+  background-color: #00f2e6;
   left: 0px;
   bottom: -80px;
   z-index: 10;
@@ -1708,7 +1739,7 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 }
 
 .schedule-speaker { /* Orange */
-  background: #ffcc00;
+  background: #00f2e6;
   background: hsla(48, 100, 50, 0.8);
   background: rgba(255, 204, 0, 0.8);
   color: black;
@@ -1804,7 +1835,7 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 .attendee-img-shadow-yellow {
   width: 80px;
   height: 80px;
-  background: #ffcc00;
+  background: #00f2e6;
   content: '';
   position: absolute;
   top: 5px;
@@ -1933,8 +1964,12 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 }
 
 .keypts {
-  background: #00f2e6;
-  padding: 5rem 0 3rem;
+  background: #371e83;
+    background: -moz-linear-gradient(top, #371e83 0%, #201b48 100%);
+    background: -webkit-linear-gradient(top, #371e83 0%,#201b48 100%);
+    background: linear-gradient(to bottom, #371e83 0%,#201b48 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#371e83', endColorstr='#201b48',GradientType=0 );
+  padding: 10rem 0 5rem;
   margin: 0;
   color: white;
 }
@@ -1968,12 +2003,18 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 } */
 
 .keypoint img {
-  width: 120px;
+  width: 100px;
+  margin: 0 auto;
 }
 
 .keypoint p {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 300;
+  /* opacity: 0.8; */
+}
+
+.keypoint h3 {
+  text-align: center;
 }
 
 .grid {
@@ -2295,7 +2336,7 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 }
 
 .site-footer {
-  background: #ffcc00;
+  background: #00f2e6;
   color: white;
   padding: 4rem 0;
 }
@@ -4060,7 +4101,7 @@ h4.sponsor-section-title {
 }
 
 .ticket .benefit-title.active {
-  background: #ffcc00;
+  background: #00f2e6;
 }
 
 .ticket .benefit-item {
@@ -4136,6 +4177,11 @@ h4.sponsor-section-title {
 .flex-it .right-half {
   width: 50%;
   justify-self: flex-end;
+}
+.grid-it-2 {
+  display: grid;
+  grid-column-gap: 2rem;
+  grid-template-columns: 1fr 1fr;
 }
 .site-title a {
   height: 100%;
