--- a/server/views/partials/plenary.pug
+++ b/server/views/partials/plenary.pug
@@ -1,6 +1,18 @@
 section.plenary
   .container
-    img(src='/img/jack.jpg')
-    h2.plenary-title Plenary Speaker
-    h3.plenary-name Jack Richardson
-    h4.plenary-topic Something about English teachers and Motivation
+    h2.section-title Plenary Speaker
+    //- img.plenary-img.speaker(src='/img/people/jackrichards.png')
+    .grid-it-2
+      figure
+        img.plenary-img.speaker(src='http://gisborneherald.co.nz/csp/mediapool/sites/dt.common.streams.StreamServer.cls?STREAMOID=RbsZ0pY3IL4MKsUUiBnCAc$daE2N3K4ZzOUsqbU5sYsCRz6CJNxgv$IW1aoMmGQlWCsjLu883Ygn4B49Lvm9bPe2QeMKQdVeZmXF$9l$4uCZ8QDXhaHEp3rvzXRJFdy0KqPHLoMevcTLo3h8xh70Y6N_U_CryOsw6FTOdKL_jpQ-&CONTENTTYPE=image/jpg')
+      .plenary-info
+        hgroup
+          h3.plenary-name Jack C. Richards
+          h4.plenary-topic Teacher Identity in Language Teaching
+        .abstract 
+          //- h5.abstract Abstract
+          p This talk explores notions of identity and teacher identity, how these relate to the specific characteristics of language teaching, and how teacher identity can evolve or be developed through experience and teacher education. The notion of teacher identity stresses the individual characteristics of the teacher and how these are integrated with the possibilities and potentials provided in the institutional identity of teacher and the content and methods of a specific field, as these are realized in specific contexts of teaching. The elements of a teacher identity in language teaching are derived from a review of literature on teacher identity and described in terms of the foundational and advanced competences required for language teaching, as illustrated by excerpts from teacher narratives. The paper concludes with recommendations for teacher education and professional development with a focus on identity.
+        //- .bio 
+          //- h5.bio Bio
+          //- p Jack Richards has had an active career in the Asia Pacific region and is currently an honorary professor in the faculty of education at the University of Sydney and at the University of Auckland and an Adjunct Professor at Victoria University. He is a frequent presenter worldwide and has written over 150 books and articles on language teaching as well as many widely used classroom texts including the Interchange and Four Corners series. Recent publications include Jack Richards’ 50 Tips for Teacher Development (Cambridge), Key Issues in Language Teaching (Cambridge), Curriculum Development in Language Teaching 2nd edition (Cambridge), Approaches and Methods in Language Teaching 3rd edition (Cambridge), Language Learning Beyond the Classroom (with David Nunan, Routledge) and Creativity in Language Teaching (with Rodney Jones), Routledge. Jack Richards has active interests in music and arts and supports a number of scholarship programs.  In the musical domain he has commissioned numerous works by New Zealand composers. In 2014 the Jack C Richards Decorative Arts Gallery was opened at the Tairawhiti Museum, Gisborne New Zealand. In 2011 he was awarded an honorary doctorate of literature by Victoria University, Wellington, for his services to education and the arts and in 2014 received the Award for Patronage from the Arts Foundation of New Zealand. In March 2016 the International TESOL organization as part of their 50th anniversary honored Jack Richards as one of the 50 TESOL specialists worldwide to have made a significant impact on language teaching in the last 50 years.
+          a(href='www.professorjackrichards.com') Website
